# Radium-Engine

./: .clang-format  .cmake-format  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  AboutDialog_8cpp.html  AboutDialog_8cpp_source.html  AboutDialog_8hpp.html  AboutDialog_8hpp__dep__incl.map  AboutDialog_8hpp__incl.md5  AboutDialog_8hpp_source.html  AbstractGeometry_8hpp.html  AbstractGeometry_8hpp__dep__incl.map  AbstractGeometry_8hpp__dep__incl.md5  AbstractGeometry_8hpp__incl.map  AbstractGeometry_8hpp__incl.md5  AbstractGeometry_8hpp_source.html  AdjacencyList_8cpp.html  AdjacencyList_8cpp__incl.map  AdjacencyList_8cpp__incl.md5  AdjacencyList_8cpp_source.html  AdjacencyList_8hpp.html  AdjacencyList_8hpp__dep__incl.map  AdjacencyList_8hpp__dep__incl.md5  AdjacencyList_8hpp__incl.map  AdjacencyList_8hpp__incl.md5  AdjacencyList_8hpp_source.html  AdjacencyList_8inl.html  AdjacencyList_8inl__dep__incl.map  AdjacencyList_8inl__dep__incl.md5  AdjacencyList_8inl__incl.map  AdjacencyList_8inl__incl.md5  AdjacencyList_8inl_source.html  Adjacency_8cpp.html  Adjacency_8cpp__incl.map  Adjacency_8cpp__incl.md5  Adjacency_8cpp_source.html  (+7549 more)
3rdPartyLibraries/: CMakeLists.txt
3rdPartyLibraries/OpenGL/: CMakeLists.txt
3rdPartyLibraries/PositionBasedDynamics/: .gitmodules
Applications/: CMakeLists.txt
Applications/HelloRadium/: CMakeLists.txt  main.cpp  minimalapp.cpp  minimalapp.hpp  minimalradium.cpp  minimalradium.hpp
Applications/MainApplication/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  config_matthieu.xml  main.cpp
Applications/MainApplication_BE/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp  main.cpp
Applications/MattApp/: config.xml
Applications/OpenGLExperiment/: CMakeLists.txt  main.cpp
Applications/SimpleSubdivideExample/: CMakeLists.txt  main.cpp
Applications/Simplifier/: CMakeLists.txt  main.cpp  simplifier.cpp  simplifier.hpp
Applications/Test0/: CMakeLists.txt  main.cpp  minimalapp.cpp  minimalapp.hpp  minimalradium.cpp  minimalradium.hpp
Applications/TestGLFW/: CMakeLists.txt  main.cpp
Core/src/: CMakeLists.txt  core.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.hpp
Engine/src/: CMakeLists.txt  Engine.cpp
MainApplication/: CMakeLists.txt
MainApplication/Gui/: MainWindow.cpp  MainWindow.hpp  main.cpp
MainApplication/Viewer/: Viewer.cpp  Viewer.hpp
MainApplication/src/: CMakeLists.txt  main.cpp
Plugins/: CMakeLists.txt
Plugins/Animation/: AnimationComponent.cpp  AnimationLoader.cpp  AnimationLoader.hpp  CMakeLists.txt
Plugins/AssimpLoader/: CMakeLists.txt
Plugins/CMakeModules/: FindRadium.cmake
Plugins/CameraManip/: CMakeLists.txt
Plugins/Dummy/: CMakeLists.txt
Plugins/FancyMesh/: CMakeLists.txt  FancyMeshComponent.cpp  FancyMeshComponent.hpp  FancyMeshSystem.hpp
Plugins/MeshFeatureTracking/: CMakeLists.txt
Plugins/MeshPaint/: CMakeLists.txt
Plugins/PbrtLoader/: CMakeLists.txt
Plugins/PointCloud/: CMakeLists.txt
Plugins/PostSubdivision/: CMakeLists.txt
Plugins/Skinning/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  LICENCES.LGPL  LICENCES.md  LICENSES.BSD  LICENSES.LGPL  LICENSES.md  basics.md  concepts.md  developer.md  header.html  main.md  rendering.md  timeline.md  use.md
doc/basics/: commandline.md  compilation.md  dependencies.md  details.md  radium-as-submodule.md  troubleshooting.md  vs.md
doc/concepts/: Rendering-future.puml  Rendering-old.puml  animation.md  componentMessenger.md  dataflow.md  eventSystem.md  forwardrenderer.md  gltfconformance.md  keymapping.md  lightmanagement.md  material.md  mesh.md  nodesystem.md  pluginSystem.md  rendering.md  textures.md
doc/developer/: animation.md  buildchain.md  cameraManipulator.md  cmakeutilities.md  conventions.md  develWithRadium.md  featurepicking.md  keymapping.md  lightmanagement.md  material.md  mesh.md  oldmanual.md  plugin.md  rendering.md  textures.md  timeline.md
doc/index/: index.html  style.css
doc/use/: plugin.md
examples/: CMakeLists.txt
examples/CoreExample/: CMakeLists.txt  main.cpp
examples/CurveEditor/: CMakeLists.txt  CurveComponent.cpp  CurveComponent.hpp  CurveEditor.cpp  CurveEditor.hpp  CurveFactory.hpp  PointComponent.cpp  PointComponent.hpp  PointFactory.hpp  PolylineComponent.cpp  PolylineComponent.hpp  PolylineFactory.hpp  README.md  StrokeComponent.cpp  StrokeComponent.hpp  StrokeFactory.hpp  main.cpp
examples/CustomCameraManipulator/: CMakeLists.txt  main.cpp
examples/DataflowExamples/: CMakeLists.txt
examples/DrawPrimitives/: AllPrimitivesComponent.cpp  AllPrimitivesComponent.hpp  CMakeLists.txt  main.cpp  minimalapp.cpp  minimalapp.hpp  minimalradium.cpp  minimalradium.hpp
examples/DrawPrimitivesDemo/: CMakeLists.txt
examples/EntityAnimation/: CMakeLists.txt  main.cpp
examples/EnvMap/: CMakeLists.txt  main.cpp
examples/HeadlessExample/: CMakeLists.txt  main.cpp
examples/HelloRadium/: CMakeLists.txt  main.cpp
examples/KeyEvent/: CMakeLists.txt  main.cpp
examples/MaterialEditing/: CMakeLists.txt  main.cpp
examples/MaterialEdition/: CMakeLists.txt  main.cpp
examples/MaterialEditionDemoApp/: CMakeLists.txt  main.cpp
examples/ParameterEditing/: CMakeLists.txt  main.cpp
examples/ParameterEdition/: CMakeLists.txt  main.cpp
examples/Picking/: CMakeLists.txt  main.cpp
examples/PickingDemoApp/: CMakeLists.txt
examples/PluginsWithLib/: CMakeLists.txt  README.md
examples/RawShaderMaterial/: CMakeLists.txt  main.cpp
examples/SimpleAnimation/: CMakeLists.txt  main.cpp
examples/SimpleAnimationApp/: main.cpp
examples/SimpleSimulation/: CMakeLists.txt  main.cpp
examples/SimpleSkinning/: CMakeLists.txt  main.cpp
examples/TexturedQuad/: CMakeLists.txt  main.cpp
examples/TexturedQuadDynamic/: CMakeLists.txt  main.cpp
examples/Volume/: CMakeLists.txt  main.cpp
examples/VolumeDemoApp/: CMakeLists.txt
src/: CMakeGenerateTrees.txt  CMakeGenerateVersion.txt  CMakeLists.txt  Config.cmake.in  version.cpp.in  version.h
src/Core/: CMakeLists.txt  pch.hpp  (+6 more)
tests/: CMakeLists.txt  README.md  Tests.hpp
(+16325 files in other folders)
