execute_process( COMMAND git submodule init )
execute_process( COMMAND git submodule update )

if ((${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"))
    add_definitions( -fexceptions -frtti -w )
elseif ( UNIX OR MINGW )
    add_definitions( -fexceptions -frtti -w )
    if ( MINGW )
        add_definitions (-D_USE_MATH_DEFINES)
    endif()
elseif (MSVC)
    set( CMAKE_DEBUG_POSTFIX "" )
    string (REGEX REPLACE "/EHs-c-" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    string (REGEX REPLACE "/GR-" ""    CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    add_definitions( "/EHsc /GR /w")
endif()

set( ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL
    "If the supplementary tools for Assimp are built in addition to the library." )
set( ASSIMP_BUILD_TESTS OFF CACHE BOOL
    "If the test suite for Assimp is built in addition to the library." )
set( ASSIMP_BUILD_SAMPLES OFF CACHE BOOL
    "If the official samples are built as well (needs Glut)." )

# Do not clean 3rt party libs when cleaning the build.
set_directory_properties( PROPERTIES CLEAN_NO_CUSTOM 1)

MACRO(REMOVE_ASSIMP_IMPORTER name)
  OPTION(ASSIMP_BUILD_${name}_IMPORTER "build the ${name} importer" FALSE)
ENDMACRO()

REMOVE_ASSIMP_IMPORTER(3D)
REMOVE_ASSIMP_IMPORTER(AC)
REMOVE_ASSIMP_IMPORTER(ASE)
REMOVE_ASSIMP_IMPORTER(ASSBIN)
REMOVE_ASSIMP_IMPORTER(ASSXML)
REMOVE_ASSIMP_IMPORTER(B3D)
REMOVE_ASSIMP_IMPORTER(BLEND)
REMOVE_ASSIMP_IMPORTER(BVH)
REMOVE_ASSIMP_IMPORTER(COB)
REMOVE_ASSIMP_IMPORTER(CSM)
REMOVE_ASSIMP_IMPORTER(DXF)
REMOVE_ASSIMP_IMPORTER(HMP)
REMOVE_ASSIMP_IMPORTER(IFC)
REMOVE_ASSIMP_IMPORTER(IRR)
REMOVE_ASSIMP_IMPORTER(LWO)
REMOVE_ASSIMP_IMPORTER(LWS)
REMOVE_ASSIMP_IMPORTER(MD2)
REMOVE_ASSIMP_IMPORTER(MD3)
REMOVE_ASSIMP_IMPORTER(MD5)
REMOVE_ASSIMP_IMPORTER(MDC)
REMOVE_ASSIMP_IMPORTER(MDL)
REMOVE_ASSIMP_IMPORTER(MS3D)
REMOVE_ASSIMP_IMPORTER(NDO)
REMOVE_ASSIMP_IMPORTER(NFF)
REMOVE_ASSIMP_IMPORTER(NONFREE_C4D)
REMOVE_ASSIMP_IMPORTER(OFF)
REMOVE_ASSIMP_IMPORTER(OGRE)
REMOVE_ASSIMP_IMPORTER(OPENGEX)
REMOVE_ASSIMP_IMPORTER(PLY)
REMOVE_ASSIMP_IMPORTER(Q3BSP)
REMOVE_ASSIMP_IMPORTER(Q3D)
REMOVE_ASSIMP_IMPORTER(RAW)
REMOVE_ASSIMP_IMPORTER(SMD)
REMOVE_ASSIMP_IMPORTER(STL)
REMOVE_ASSIMP_IMPORTER(TERRAGEN)
REMOVE_ASSIMP_IMPORTER(XLG)
REMOVE_ASSIMP_IMPORTER(X)

add_subdirectory( Assimp )
